--- a/VR.htm
+++ b/VR.htm
@@ -33,16 +33,18 @@
 			<a-assets>
 				<video id="video" src="https://ucarecdn.com/bcece0a8-86ce-460e-856b-40dac4875f15/" autoplay loop crossorigin>					
 				</video>
-    			<a-asset-item id="tie-obj" src="/3dmodel/retro-racer/RetroRacerOrange.obj"></a-asset-item>
-    			<a-asset-item id="tie-mtl" src="/3dmodel/retro-racer/RetroRacerOrange.mtl"></a-asset-item>
- 			
+				<a-asset-item id="tie-obj" src="/3dmodel/retro-racer/ship.obj"></a-asset-item>
+				<a-asset-item id="tie-mtl" src="/3dmodel/retro-racer/ship.mtl"></a-asset-item>
+				<a-asset-item id="tie-dae" src="/3dmodel/retro-racer/ship.dae"></a-asset-item>
 			</a-assets>
 			
 			<a-videosphere if="videosphere" src="#video" material="shader: hello-relativistic-world-shader; opacity: 1.0; depthTest: true" lightspeed="0">
 				<a-animation attribute="lightspeed" from="0.001" to=".99" direction="alternate" dur="5000" repeat="indefinite" easing="ease">
 				</a-animation>
 			</a-videosphere>
-				<a-entity id="tie" obj-model="obj: #tie-obj; mtl: #tie-mtl"></a-entity>		
+				<!--<a-entity id="tie" obj-model="obj: #tie-obj; mtl: #tie-mtl"></a-entity>		-->
+				<a-entity id="tie" collada-model="#tie-dae" position="0.17 1.1 0.25" scale="2 2 2">
+				</a-entity>	
 			<canvas style="width: 1525px; height: 195px;" height="195" width="1525" data-aframe-canvas="true" class="a-canvas a-grab-cursor"/>
 			<div aframe-injected="" class="a-enter-vr">
 				<button aframe-injected="" class="a-enter-vr-button"/>
